# DeepLearningProjectL7

./: README.md  g.txt  main.ipynb  main.py  model.h5  pyproject.toml
